fix collapsing cancel button

--- a/client/assets/styles/scss/forms/forms-table-actions.scss
+++ b/client/assets/styles/scss/forms/forms-table-actions.scss
@@ -220,7 +220,7 @@
 
   .p,
   .btn.green,
-  .btn.white {
+  .btn-cancel {
     flex: 0 0 auto;
   }
 
